@@ -1,5 +1,10 @@
 2005-09-13  Peter Richardson  <Peter.Richardson@durham.ac.uk>
 
+	* Decay/DecayConfig.h (Repository): this was really the .fh file for Hw64Decayer
+	and has been renamed as such
+
+2005-09-13  Peter Richardson  <Peter.Richardson@durham.ac.uk>
+
 	* Decay/ExampleDecayer (Repository): removed the ExampleDecayer as it served little purpose
 	and should be replaced by information on the Wiki.
 
